fix gap media screen

--- a/assets/scss/cadastro.scss
+++ b/assets/scss/cadastro.scss
@@ -156,7 +156,6 @@ form {
 @media screen and(max-width: 1000px) {
   .form-user {
     position: relative;
-    bottom: 3px;
   }
 }
 
